bug: Fix various bugs
Change typo in spelling.
Change skills padding issue on mobile.
Change burger menu problem where both buttons get stretched.

--- a/website-portfolio/src/App.css
+++ b/website-portfolio/src/App.css
@@ -78,7 +78,7 @@ html {
 
 .card-skills {
   position: relative;
-  margin-left:55px;
+  margin-left:25px;
   width: 110px;
   height: 110px;
   overflow: hidden;
